Página para escolha dos modelos e página do formulário adicionadas

--- a/MeuCurriculo/src/app/app.component.html
+++ b/MeuCurriculo/src/app/app.component.html
@@ -1,2 +1,4 @@
 <!--<app-home></app-home>-->
-<app-dicas></app-dicas>
+<!--<app-dicas></app-dicas>-->
+<!--<app-escolhermodelo></app-escolhermodelo>-->
+<app-form></app-form>
