--- a/MeuCurriculo/src/app/home/home.component.html
+++ b/MeuCurriculo/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+                                                                          <!--CABEÇALHO-->
 <header class="cabecalho">
    <div class="container">
     <div class="conteudo-cabecalho">
@@ -14,6 +15,9 @@
     </div>
    </div>
   </header>
+
+
+                                                                      <!--TEXTO PRINCIPAL-->
   <main>
    <section class="secao-principal">
     <div class="container">
@@ -21,6 +25,9 @@
      <p class="subtitulo" id="subtitulo">Destaque-se no mercado com um currículo impecável</p><button class="botao-comecar" id="botao-comecar">Começar a Criar</button>
     </div>
    </section>
+
+
+                                                                        <!--CARDS-PASSOS-->   
    <section class="secao-passos">
     <div class="container">
      <h2 class="titulo-secao">Como Funciona</h2>
@@ -29,6 +36,8 @@
        <div class="numero-passo">
         1
        </div>
+
+
        <h3 class="titulo-passo" id="passo1-titulo">Escolha o Modelo</h3>
        <p class="descricao-passo" id="passo1-descricao">Modelos profissionais e modernos</p>
       </article>
@@ -36,6 +45,7 @@
        <div class="numero-passo">
         2
        </div>
+
        <h3 class="titulo-passo" id="passo2-titulo">Preencha seus Dados</h3>
        <p class="descricao-passo" id="passo2-descricao">Interface intuitiva e rápida</p>
       </article>
@@ -43,6 +53,7 @@
        <div class="numero-passo">
         3
        </div>
+
        <h3 class="titulo-passo" id="passo3-titulo">Download em PDF</h3>
        <p class="descricao-passo" id="passo3-descricao">Pronto para enviar às empresas</p>
       </article>
